fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ h3 {
 
     display: inline-block;
     position: absolute;
-    right: 40%;
+    right: 43%;
     text-align: left;
     /* width: 50%; */
 
